--- a/res/css/views/directory/_NetworkDropdown.scss
+++ b/res/css/views/directory/_NetworkDropdown.scss
@@ -14,6 +14,10 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
+.mx_NetworkDropdown_wrapper .mx_ContextualMenu {
+    min-width: 200px;
+}
+
 .mx_NetworkDropdown_addServer {
     font-weight: normal;
     font-size: $font-15px;
