--- a/res/themes/dark/css/_dark.scss
+++ b/res/themes/dark/css/_dark.scss
@@ -222,6 +222,7 @@ $resend-button-divider-color: rgba($header-panel-text-primary-color, 0.74);
 $codeblock-background-color: #2a3039;
 $scrollbar-thumb-color: rgba(255, 255, 255, 0.2);
 $selected-color: $room-highlight-color;
+$message-composer: #23395d;
 // ********************
 
 // blur amounts for left left panel (only for element theme)
