--- a/res/themes/light/css/_light.scss
+++ b/res/themes/light/css/_light.scss
@@ -307,6 +307,7 @@ $resend-button-divider-color: $input-darker-bg-color;
 $codeblock-background-color: $header-panel-bg-color;
 $scrollbar-thumb-color: rgba(0, 0, 0, 0.2);
 $selected-color: $secondary-accent-color;
+$message-composer: #b2cee6;
 // ********************
 
 // One-off global colors - these apply to both themes
