--- a/res/themes/legacy-dark/css/_legacy-dark.scss
+++ b/res/themes/legacy-dark/css/_legacy-dark.scss
@@ -205,6 +205,11 @@ $location-live-color: #5c56f5;
 $location-live-secondary-color: #deddfd;
 // ********************
 
+// One-off colors
+// ********************
+$message-composer: #23395d;
+// ********************
+
 // ***** Mixins! *****
 
 @define-mixin mx_DialogButton {
