Remove element='button' from AccessibleButton
Since AccessibleButton has role='button' by default, setting the element button property is redundant.

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/components/views/location/_ShareType.scss
+++ b/res/css/components/views/location/_ShareType.scss
@@ -45,6 +45,7 @@ limitations under the License.
 
 .mx_ShareType_option {
     width: 100%;
+    box-sizing: border-box; // avoid the buttons from overflowing. otherwise: calc(100% - padding * 2)
     display: flex;
     flex-direction: row;
     align-items: center;
