--- a/res/css/structures/_RoomView.scss
+++ b/res/css/structures/_RoomView.scss
@@ -183,6 +183,10 @@ limitations under the License.
     box-sizing: border-box;
 }
 
+.mx_RoomView--local .mx_ScrollPanel .mx_RoomView_MessageList {
+    justify-content: center;
+}
+
 .mx_RoomView_MessageList li {
     clear: both;
 }
