--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -712,8 +712,7 @@ limitations under the License.
 }
 
 /* events that do not require bubble layout */
-.mx_GenericEventListSummary[data-layout=bubble],
-.mx_EventTile.mx_EventTile_bad[data-layout=bubble] {
+.mx_GenericEventListSummary[data-layout=bubble] {
     .mx_EventTile_line {
         background: transparent;
     }
