--- a/res/css/_components.scss
+++ b/res/css/_components.scss
@@ -240,6 +240,7 @@
 @import "./views/rooms/_EntityTile.scss";
 @import "./views/rooms/_EventBubbleTile.scss";
 @import "./views/rooms/_EventTile.scss";
+@import "./views/rooms/_GroupLayout.scss";
 @import "./views/rooms/_HistoryTile.scss";
 @import "./views/rooms/_IRCLayout.scss";
 @import "./views/rooms/_JumpToBottomButton.scss";
