Include mx_AccessibleButton_kind_link in mx_InviteDialog_helpText
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/dialogs/_InviteDialog.scss
+++ b/res/css/views/dialogs/_InviteDialog.scss
@@ -345,10 +345,10 @@ limitations under the License.
 
 .mx_InviteDialog_helpText {
     margin: 0;
-}
 
-.mx_InviteDialog_helpText .mx_AccessibleButton_kind_link {
+.mx_AccessibleButton_kind_link {
     padding: 0;
+}
 }
 
 .mx_InviteDialog_dialPad .mx_InviteDialog_dialPadField {
