--- a/res/css/views/dialogs/_InviteDialog.scss
+++ b/res/css/views/dialogs/_InviteDialog.scss
@@ -351,7 +351,8 @@ limitations under the License.
 }
 }
 
-.mx_InviteDialog_dialPad .mx_InviteDialog_dialPadField {
+.mx_InviteDialog_dialPad {
+.mx_InviteDialog_dialPadField {
     border-top: 0;
     border-left: 0;
     border-right: 0;
@@ -364,6 +365,7 @@ limitations under the License.
         font-weight: 600;
         padding-top: 0;
     }
+}
 }
 
 .mx_InviteDialog_dialPad .mx_InviteDialog_dialPadField:focus-within {
