Include mx_InviteDialog_dialPadField:focus-within in mx_InviteDialog_dialPadField
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/dialogs/_InviteDialog.scss
+++ b/res/css/views/dialogs/_InviteDialog.scss
@@ -360,16 +360,16 @@ limitations under the License.
     margin-top: 0;
     border-color: $quaternary-content;
 
+    &:focus-within {
+        border-color: $accent;
+    }
+
     input {
         font-size: 18px;
         font-weight: 600;
         padding-top: 0;
     }
 }
-}
-
-.mx_InviteDialog_dialPad .mx_InviteDialog_dialPadField:focus-within {
-    border-color: $accent;
 }
 
 .mx_InviteDialog_dialPadField .mx_Field_postfix {
