--- a/res/css/views/dialogs/_InviteDialog.scss
+++ b/res/css/views/dialogs/_InviteDialog.scss
@@ -353,7 +353,7 @@ limitations under the License.
 
 .mx_InviteDialog_dialPad {
     width: 224px;
-    margin-top: 16px;
+    margin-top: $spacing-16;
     margin-inline: auto;
 
     .mx_InviteDialog_dialPadField {
@@ -380,8 +380,8 @@ limitations under the License.
     }
 
     .mx_DialPad {
-        row-gap: 16px;
-        column-gap: 48px;
+        row-gap: $spacing-16;
+        column-gap: 48px; // TODO: Use a spacing variable
         margin-inline: auto;
     }
 }
