Makes the avatar of the user menu non-draggable
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/structures/_UserMenu.scss
+++ b/res/css/structures/_UserMenu.scss
@@ -26,6 +26,10 @@ limitations under the License.
 
     .mx_UserMenu_userAvatar {
         position: relative;
+
+        .mx_BaseAvatar {
+            pointer-events: none; // makes the avatar non-draggable
+        }
     }
 
     .mx_UserMenu_name {
