--- a/res/css/components/views/location/_ZoomButtons.scss
+++ b/res/css/components/views/location/_ZoomButtons.scss
@@ -19,26 +19,26 @@ limitations under the License.
     bottom: $spacing-32;
     right: $spacing-24;
     display: flex;
-    flex-flow: column;
+    flex-direction: column;
     row-gap: $spacing-8;
 
     .mx_ZoomButtons_button {
+        $ZoomButtons_button-size: 24px;
+
         border-radius: 4px;
         display: flex;
-        flex-direction: row;
         justify-content: center;
         align-items: center;
-
-        height: 24px;
-        width: 24px;
-
+        height: $ZoomButtons_button-size;
+        width: $ZoomButtons_button-size;
         background: $background;
         box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
 
         .mx_ZoomButtons_icon {
-            height: 10px;
-            width: 10px;
+            $ZoomButtons_icon-size: 10px;
 
+            height: $ZoomButtons_icon-size;
+            width: $ZoomButtons_icon-size;
             color: $primary-content;
         }
     }
