--- a/res/css/views/emojipicker/_EmojiPicker.scss
+++ b/res/css/views/emojipicker/_EmojiPicker.scss
@@ -159,6 +159,10 @@ limitations under the License.
     list-style: none;
     width: 38px;
     cursor: pointer;
+
+    &.mx_AccessibleButton_disabled {
+        cursor: not-allowed;
+    }
 }
 
 .mx_EmojiPicker_item {
