Last fixes for the composer UI

--- a/res/css/structures/_RoomView.scss
+++ b/res/css/structures/_RoomView.scss
@@ -34,7 +34,7 @@ limitations under the License.
 
 .mx_MainSplit_timeline {
     .mx_MessageComposer_wrapper {
-        margin: $spacing-8 $spacing-16;
+        margin: 0 $spacing-16 $spacing-8 $spacing-16;
     }
 }
 
