--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -75,7 +75,7 @@ limitations under the License.
     align-items: center;
     border: 1px solid $quaternary-content;
     border-radius: 12px;
-    padding: $spacing-12 $spacing-8;
+    padding: $spacing-8 $spacing-12;
     margin-right: $spacing-16;
 
     transition: border-color var(--transition-short);
@@ -119,10 +119,10 @@ limitations under the License.
 }
 
 .mx_MessageComposer_e2eIcon.mx_E2EIcon {
-    margin: 0 0 2px;
+    display: inline;
+    margin: 0;
     width: 12px;
     height: 12px;
-    align-self: end;
 }
 
 .mx_MessageComposer_noperm_error {
