Include mx_MessageActionBar_maskButton::after in mx_MessageActionBar_maskButton
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/messages/_MessageActionBar.scss
+++ b/res/css/views/messages/_MessageActionBar.scss
@@ -75,9 +75,8 @@ limitations under the License.
         cursor: not-allowed;
         opacity: .75;
     }
-}
 
-.mx_MessageActionBar_maskButton::after {
+&::after {
     content: '';
     position: absolute;
     top: 0;
@@ -88,6 +87,7 @@ limitations under the License.
     mask-repeat: no-repeat;
     mask-position: center;
     background-color: $secondary-content;
+}
 }
 
 .mx_MessageActionBar_maskButton:hover::after {
