Include mx_MessageActionBar_maskButton:hover::after in mx_MessageActionBar_maskButton
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/messages/_MessageActionBar.scss
+++ b/res/css/views/messages/_MessageActionBar.scss
@@ -88,10 +88,10 @@ limitations under the License.
     mask-position: center;
     background-color: $secondary-content;
 }
-}
 
-.mx_MessageActionBar_maskButton:hover::after {
+&:hover::after {
     background-color: $primary-content;
+}
 }
 
 .mx_MessageActionBar_reactButton::after {
