--- a/res/css/views/messages/_MessageActionBar.scss
+++ b/res/css/views/messages/_MessageActionBar.scss
@@ -92,64 +92,64 @@ limitations under the License.
 &:hover::after {
     background-color: $primary-content;
 }
-}
 
-.mx_MessageActionBar_reactButton::after {
+&.mx_MessageActionBar_reactButton::after {
     mask-image: url('$(res)/img/element-icons/room/message-bar/emoji.svg');
 }
 
-.mx_MessageActionBar_replyButton::after {
+&.mx_MessageActionBar_replyButton::after {
     mask-image: url('$(res)/img/element-icons/room/message-bar/reply.svg');
 }
 
-.mx_MessageActionBar_threadButton::after {
+&.mx_MessageActionBar_threadButton::after {
     mask-image: url('$(res)/img/element-icons/message/thread.svg');
 }
 
-.mx_MessageActionBar_threadButton .mx_Indicator {
+&.mx_MessageActionBar_threadButton .mx_Indicator {
     background: $links;
     animation-iteration-count: infinite;
 }
 
-.mx_MessageActionBar_editButton::after {
+&.mx_MessageActionBar_editButton::after {
     mask-image: url('$(res)/img/element-icons/room/message-bar/edit.svg');
 }
 
-.mx_MessageActionBar_optionsButton::after {
+&.mx_MessageActionBar_optionsButton::after {
     mask-image: url('$(res)/img/element-icons/context-menu.svg');
 }
 
-.mx_MessageActionBar_resendButton::after {
+&.mx_MessageActionBar_resendButton::after {
     mask-image: url('$(res)/img/element-icons/retry.svg');
 }
 
-.mx_MessageActionBar_cancelButton::after {
+&.mx_MessageActionBar_cancelButton::after {
     mask-image: url('$(res)/img/element-icons/trashcan.svg');
 }
 
-.mx_MessageActionBar_downloadButton::after {
+&.mx_MessageActionBar_downloadButton::after {
     mask-size: 14px;
     mask-image: url('$(res)/img/download.svg');
 }
 
-.mx_MessageActionBar_expandMessageButton::after {
+&.mx_MessageActionBar_expandMessageButton::after {
     mask-size: 12px;
     mask-image: url('$(res)/img/element-icons/expand-message.svg');
 }
 
-.mx_MessageActionBar_collapseMessageButton::after {
+&.mx_MessageActionBar_collapseMessageButton::after {
     mask-size: 12px;
     mask-image: url('$(res)/img/element-icons/collapse-message.svg');
 }
 
-.mx_MessageActionBar_viewInRoom::after {
+&.mx_MessageActionBar_viewInRoom::after {
     mask-image: url('$(res)/img/element-icons/view-in-room.svg');
 }
 
-.mx_MessageActionBar_copyLinkToThread::after {
+&.mx_MessageActionBar_copyLinkToThread::after {
     mask-image: url('$(res)/img/element-icons/link.svg');
 }
 
-.mx_MessageActionBar_downloadButton.mx_MessageActionBar_downloadSpinnerButton::after {
+&.mx_MessageActionBar_downloadButton.mx_MessageActionBar_downloadSpinnerButton::after {
     background-color: transparent; // hide the download icon mask
+}
 }
