Fixes right panel composer look and feel

--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -197,9 +197,18 @@ limitations under the License.
     .mx_MessageComposer {
         background-color: $background;
         border-radius: 8px;
-        margin-top: 8px;
-        padding: 0 8px;
+        margin-top: $spacing-8;
+        padding: $spacing-8;
         box-sizing: border-box;
+
+        .mx_ReplyPreview {
+            padding-top: 0;
+            padding-left: $spacing-8;
+            padding-right: $spacing-8;
+            margin-left: calc(-1 * $spacing-8);
+            margin-right: calc(-1 * $spacing-8);
+            border-color: transparent;
+        }
     }
 
     .mx_MessageTimestamp {
