Use Heading size='h4'
- Use size='h4' instead of 'h2' as 15px has been specified as the font-size of the header
- Use logical values following _Heading.scss
- Remove line-height declaration in favor of the default value

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/right_panel/_PinnedMessagesCard.scss
+++ b/res/css/views/right_panel/_PinnedMessagesCard.scss
@@ -68,12 +68,8 @@ limitations under the License.
             }
 
             .mx_PinnedMessagesCard_empty_header {
-                font-weight: $font-semi-bold;
-                font-size: $font-15px;
-                line-height: $font-24px;
                 color: $primary-content;
-                margin-top: 24px;
-                margin-bottom: 20px;
+                margin-block: $spacing-24 $spacing-20;
             }
 
             > span {
