--- a/res/css/views/right_panel/_PinnedMessagesCard.scss
+++ b/res/css/views/right_panel/_PinnedMessagesCard.scss
@@ -33,33 +33,37 @@ limitations under the License.
         }
     }
 
-    .mx_PinnedMessagesCard_empty_wrapper {
+    .mx_PinnedMessagesCard_empty {
         display: flex;
         height: 100%;
 
-        .mx_PinnedMessagesCard_empty {
+        > div {
             height: max-content;
             text-align: center;
             margin: auto 40px;
 
             .mx_PinnedMessagesCard_MessageActionBar {
                 pointer-events: none;
+                display: flex;
+                height: 32px;
+                line-height: $font-24px;
+                border-radius: 8px;
+                background: $background;
+                border: 1px solid $input-border-color;
+                padding: 1px;
                 width: max-content;
                 margin: 0 auto;
+                box-sizing: border-box;
 
-                // Cancel the default values for non-interactivity
-                position: unset;
-                visibility: visible;
-                cursor: unset;
-
-                &::before {
-                    content: unset;
+                .mx_MessageActionBar_maskButton {
+                    display: inline-block;
+                    position: relative;
                 }
 
                 .mx_MessageActionBar_optionsButton {
-                    background: var(--MessageActionBar-item-hover-background);
-                    border-radius: var(--MessageActionBar-item-hover-borderRadius);
-                    z-index: var(--MessageActionBar-item-hover-zIndex);
+                    background: $panel-actions;
+                    border-radius: 6px;
+                    z-index: 1;
 
                     &::after {
                         background-color: $primary-content;
@@ -67,9 +71,13 @@ limitations under the License.
                 }
             }
 
-            .mx_PinnedMessagesCard_empty_header {
+            > h2 {
+                font-weight: $font-semi-bold;
+                font-size: $font-15px;
+                line-height: $font-24px;
                 color: $primary-content;
-                margin-block: $spacing-24 $spacing-20;
+                margin-top: 24px;
+                margin-bottom: 20px;
             }
 
             > span {
