Fix the E2E icon position next to permission error message on mx_MessageComposer_row
This PR follows mx_BasicMessageComposer's style, including the block as a child element of mx_MessageComposer_row to clarify that flex property can be legitimately applied here.

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -104,6 +104,13 @@ limitations under the License.
     &[aria-disabled=true] {
         cursor: not-allowed;
     }
+
+    .mx_MessageComposer_noperm_error {
+        font-style: italic;
+        color: $tertiary-content;
+        font-size: $font-12px;
+        flex: 1;
+    }
 }
 
 .mx_MessageComposer .mx_MessageComposer_avatar {
@@ -124,12 +131,6 @@ limitations under the License.
     width: 12px;
     height: 12px;
     align-self: end;
-}
-
-.mx_MessageComposer_noperm_error {
-    font-style: italic;
-    color: $tertiary-content;
-    font-size: $font-12px;
 }
 
 .mx_MessageComposer_input_wrapper {
