--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -106,13 +106,15 @@ limitations under the License.
     }
 }
 
-.mx_MessageComposer .mx_MessageComposer_avatar {
+.mx_MessageComposer {
+.mx_MessageComposer_avatar {
     position: absolute;
     left: 26px;
-}
 
-.mx_MessageComposer .mx_MessageComposer_avatar .mx_BaseAvatar {
+.mx_BaseAvatar {
     display: block;
+}
+}
 }
 
 .mx_MessageComposer_composecontrols {
