--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -160,16 +160,16 @@ limitations under the License.
     overflow-y: auto;
     overflow-x: hidden;
     word-break: break-word;
-}
 
-// FIXME: rather unpleasant hack to get rid of <p/> margins.
-// really we should be mixing in markdown-body from gfm.css instead
-.mx_MessageComposer_editor > :first-child {
-    margin-top: 0 !important;
-}
+    // FIXME: rather unpleasant hack to get rid of <p/> margins.
+    // really we should be mixing in markdown-body from gfm.css instead
+    > :first-child {
+        margin-top: 0 !important;
+    }
 
-.mx_MessageComposer_editor > :last-child {
-    margin-bottom: 0 !important;
+    > :last-child {
+        margin-bottom: 0 !important;
+    }
 }
 
 @keyframes visualbell {
