--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -151,6 +151,12 @@ limitations under the License.
     align-items: flex-start;
     font-size: $font-14px;
     margin-right: 6px;
+
+    pre {
+        background-color: $rte-code-bg-color;
+        border-radius: 3px;
+        padding: 10px;
+    }
 }
 
 .mx_MessageComposer_editor {
@@ -184,12 +190,6 @@ limitations under the License.
 
 .mx_MessageComposer_input_error {
     animation: 0.2s visualbell;
-}
-
-.mx_MessageComposer_input pre {
-    background-color: $rte-code-bg-color;
-    border-radius: 3px;
-    padding: 10px;
 }
 
 .mx_MessageComposer_input textarea {
