--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -157,6 +157,23 @@ limitations under the License.
         border-radius: 3px;
         padding: 10px;
     }
+
+    textarea {
+        display: block;
+        width: 100%;
+        padding: 0px;
+        margin-top: 6px;
+        margin-bottom: 6px;
+        border: 0px;
+        resize: none;
+        outline: none;
+        box-shadow: none;
+        color: $primary-content;
+        background-color: $background;
+        font-size: $font-14px;
+        max-height: 120px;
+        overflow: auto;
+    }
 }
 
 .mx_MessageComposer_editor {
@@ -190,23 +207,6 @@ limitations under the License.
 
 .mx_MessageComposer_input_error {
     animation: 0.2s visualbell;
-}
-
-.mx_MessageComposer_input textarea {
-    display: block;
-    width: 100%;
-    padding: 0px;
-    margin-top: 6px;
-    margin-bottom: 6px;
-    border: 0px;
-    resize: none;
-    outline: none;
-    box-shadow: none;
-    color: $primary-content;
-    background-color: $background;
-    font-size: $font-14px;
-    max-height: 120px;
-    overflow: auto;
 }
 
 /* hack for FF as vertical alignment of custom placeholder text is broken */
