--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -173,6 +173,17 @@ limitations under the License.
         font-size: $font-14px;
         max-height: 120px;
         overflow: auto;
+
+    /* hack for FF as vertical alignment of custom placeholder text is broken */
+    &::-moz-placeholder {
+        line-height: 100%;
+        color: $accent;
+        opacity: 1.0;
+    }
+
+    &::-webkit-input-placeholder {
+        color: $accent;
+    }
     }
 }
 
@@ -207,17 +218,6 @@ limitations under the License.
 
 .mx_MessageComposer_input_error {
     animation: 0.2s visualbell;
-}
-
-/* hack for FF as vertical alignment of custom placeholder text is broken */
-.mx_MessageComposer_input textarea::-moz-placeholder {
-    line-height: 100%;
-    color: $accent;
-    opacity: 1.0;
-}
-
-.mx_MessageComposer_input textarea::-webkit-input-placeholder {
-    color: $accent;
 }
 
 .mx_MessageComposer_button_highlight {
