--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -94,16 +94,15 @@ limitations under the License.
             }
 
             .mx_MessageComposer_button {
-                --size: 26px;
+                --MessageComposer_button-size: 26px;
                 position: relative;
-                cursor: pointer;
-                height: var(--size);
-                line-height: var(--size);
+                height: var(--MessageComposer_button-size);
+                line-height: var(--MessageComposer_button-size);
                 width: auto;
-                padding-left: var(--size);
+                padding-left: var(--MessageComposer_button-size);
                 border-radius: 50%;
-                margin-right: 6px;
-                margin-bottom: 7px;
+                margin-inline-end: 6px;
+                margin-block-end: 7px;
 
                 &:last-child {
                     margin-right: auto;
@@ -128,8 +127,8 @@ limitations under the License.
                     left: 0;
                     top: 0;
                     z-index: 0;
-                    width: var(--size);
-                    height: var(--size);
+                    width: var(--MessageComposer_button-size);
+                    height: var(--MessageComposer_button-size);
                     border-radius: 50%;
                 }
 
