mx_MessageComposer_buttonMenu is used only together with mx_MessageComposer_button
See MessageComposerButtons.tsx

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -143,6 +143,10 @@ limitations under the License.
                     }
                 }
 
+                &.mx_MessageComposer_buttonMenu::before {
+                    mask-image: url('$(res)/img/image-view/more.svg');
+                }
+
                 &.mx_MessageComposer_hangup:not(.mx_AccessibleButton_disabled)::before {
                     background-color: $alert;
                 }
@@ -316,10 +320,6 @@ limitations under the License.
 
 .mx_MessageComposer_stickers::before {
     mask-image: url('$(res)/img/element-icons/room/composer/sticker.svg');
-}
-
-.mx_MessageComposer_buttonMenu::before {
-    mask-image: url('$(res)/img/image-view/more.svg');
 }
 
 .mx_MessageComposer_sendMessageWrapper,
