Include mx_MessageComposer_sendMessageWrapper-enter-active in mx_MessageComposer_sendMessageWrapper
As the usage of the variable suggests.

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -96,15 +96,15 @@ limitations under the License.
                 opacity: 0;
             }
 
-            .mx_MessageComposer_sendMessageWrapper-enter-active {
-                width: var(--sendMessageSize);
-                transform: scale(1);
-                opacity: 1;
-            }
-
             .mx_MessageComposer_sendMessageWrapper {
                 --sendMessageSize: 32px;
                 transition: all var(--transition-short);
+
+                &.mx_MessageComposer_sendMessageWrapper-enter-active {
+                    width: var(--sendMessageSize);
+                    transform: scale(1);
+                    opacity: 1;
+                }
 
                 .mx_MessageComposer_sendMessageButton {
                     position: relative;
