--- a/res/css/views/rooms/_DecryptionFailureBar.scss
+++ b/res/css/views/rooms/_DecryptionFailureBar.scss
@@ -16,10 +16,7 @@ limitations under the License.
 
 .mx_DecryptionFailureBar {
     background-color: $system;
-    padding-left: $spacing-12;
-    padding-right: $spacing-12;
-    padding-top: $spacing-12;
-    padding-bottom: $spacing-12;
+    padding: $spacing-12;
     margin-left: $spacing-16;
     margin-right: $spacing-16;
     border-radius: 4px;
