Apply suggestions from code review
Co-authored-by: Michael Telatynski <7t3chguy@gmail.com>

--- a/res/css/views/rooms/_DecryptionFailureBar.scss
+++ b/res/css/views/rooms/_DecryptionFailureBar.scss
@@ -45,7 +45,7 @@ limitations under the License.
 }
 
 .mx_DecryptionFailureBar_message_headline {
-    font-weight: 600;
+    font-weight: $font-semi-bold;
     font-size: $font-16px;
     margin-bottom: $spacing-4;
 }
