--- a/res/css/_common.scss
+++ b/res/css/_common.scss
@@ -823,7 +823,7 @@ legend {
         }
 
         .mx_BaseCard_back {
-            margin-inline-start: calc(var(--BaseCard_header_button-margin) - 4px);
+            margin-inline-start: calc(var(--BaseCard_header_button-margin) - $spacing-4);
 
             // Header title with the back button
             ~ .mx_BaseCard_header_title {
@@ -831,13 +831,13 @@ legend {
                 margin-inline-start: var(--RightPanelCard_header-button-size);
 
                 .mx_BaseCard_header_title_heading {
-                    margin-inline-start: 6px;
+                    margin-inline-start: 6px; // TODO: Use a spacing variable
                 }
             }
         }
 
         .mx_BaseCard_close {
-            margin-inline-end: calc(var(--BaseCard_header_button-margin) - 4px);
+            margin-inline-end: calc(var(--BaseCard_header_button-margin) - $spacing-4);
         }
 
         .mx_BaseCard_header_title {
