Set min-width to prevent a flex blowout
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/messages/_MImageReplyBody.scss
+++ b/res/css/views/messages/_MImageReplyBody.scss
@@ -17,14 +17,17 @@ limitations under the License.
 .mx_MImageReplyBody {
     display: flex;
 
-    .mx_MImageBody_thumbnail_container {
+    .mx_MImageBody_thumbnail_container,
+    .mx_MImageReplyBody_info {
         flex: 1;
+        min-width: 0; // Prevent a blowout
+    }
+
+    .mx_MImageBody_thumbnail_container {
         margin-right: 4px;
     }
 
     .mx_MImageReplyBody_info {
-        flex: 1;
-
         .mx_MImageReplyBody_sender {
             grid-area: sender;
         }
