--- a/res/css/_common.scss
+++ b/res/css/_common.scss
@@ -850,6 +850,9 @@ legend {
 
             .mx_BaseCard_header_title_heading {
                 color: $secondary-content;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
             }
         }
     }
