Apply style declarations for mobile UI to modern layout, which breaks the current layout
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -273,6 +273,21 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
         margin: 0;
         padding: 4px 64px;
     }
+
+    // Media query to improve UI on mobile
+    // See: https://github.com/matrix-org/matrix-react-sdk/pull/4656
+    @media only screen and (max-width: 480px) {
+        .mx_EventTile_line,
+        .mx_EventTile_reply {
+            padding-left: 0;
+            margin-right: 0;
+        }
+
+        .mx_EventTile_content {
+            margin-top: 10px;
+            margin-right: 0;
+        }
+    }
 }
 
 .mx_GenericEventListSummary:not([data-layout=bubble]) {
@@ -678,20 +693,6 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
 .mx_EventTile:not(:hover):not(.mx_EventTile_actionBarFocused):not([data-whatinput='keyboard'] :focus-within):not(.focus-visible:focus-within) {
     .mx_MessageActionBar .mx_Indicator {
         animation: none;
-    }
-}
-
-@media only screen and (max-width: 480px) {
-
-    .mx_EventTile_line,
-    .mx_EventTile_reply {
-        padding-left: 0;
-        margin-right: 0;
-    }
-
-    .mx_EventTile_content {
-        margin-top: 10px;
-        margin-right: 0;
     }
 }
 
