--- a/res/css/views/rooms/_PinnedEventTile.scss
+++ b/res/css/views/rooms/_PinnedEventTile.scss
@@ -81,12 +81,10 @@ limitations under the License.
 
     .mx_PinnedEventTile_footer {
         grid-area: footer;
-        font-size: 10px;
+        font-size: $font-10px;
         line-height: 12px;
 
         .mx_PinnedEventTile_timestamp {
-            font-size: inherit;
-            line-height: inherit;
             color: $secondary-content;
         }
 
